--- a/packages/extension/devtools/devtools.html
+++ b/packages/extension/devtools/devtools.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <script type="module" src="/scripts/sandbox.ts"></script>
+    <script type="module" src="/devtools/extension.ts"></script>
   </body>
 </html>
