--- a/packages/extension/sandbox/sandbox.html
+++ b/packages/extension/sandbox/sandbox.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <script type="module" src="/src/extension.ts"></script>
+    <script type="module" src="/sandbox/sandbox.ts"></script>
   </body>
 </html>
